--- a/style.css
+++ b/style.css
@@ -1,8 +1,99 @@
-*{
+ 
+
+ :root {
+    /*** Colors ***/
+    --hue-color: 240;
+  
+    --body-color: hsl(var(--hue-color), 10%, 16%);
+    --screen-color: hsl(69, 24%, 59%);
+    --key-number-color: hsl(var(--hue-color), 0%, 100%);
+  
+    /*** Font and typography ***/
+    --body-font: 'Poppins', sans-serif;
+    --screen-font-size: 2em;
+    --key-number-font-size: 1.5em;
+    
+  }
+ 
+ *{
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
+}
+
+body{
+    background-color: #25252d;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.main-ctr{
+    display: grid;
+    
+}
+.container-cal{
+    
+    place-self: center; 
+    min-width: 300px;
+    min-height: 400px;
+
+}
+.calculator-display{
+    margin-bottom: 15px;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+   
+
+}
+.calculator-display input{
+    background-color: #a8b07d;
+    color: #000;
+    font-weight: 500;
+    width: calc(100% - 1px);
+    height: 100px;
+    padding: 10px;
+    text-align: right;
+    border: none;
+    outline: none;
+    margin-bottom: 10px;
+    border-radius: 10px;
+    box-shadow: 0 0 0 2px hsla(var(--hue-color), 10%, 9%);
+    background-color: var(--screen-color);
+    
+
+}
+
+.calculator-output {
+    min-width: 300px;
+    min-height: 400px;
+    padding: 40px 30px 30px;
+    background-color: #25252d;
+    border-radius: 20px;
+    box-shadow: 25px 25px 75px hsla(var(--hue-color), 10%, 9%),
+                10px 10px 70px hsla(var(--hue-color), 10%, 9%),
+                inset -5px -5px 15px hsla(var(--hue-color), 10%, 7%),
+                inset 5px 5px 15px hsla(var(--hue-color), 10%, 50%);
+    border: 2px solid #ffffff96;
+
 }
 
 .multi,.sub,.addi,.divi,.equal{
-    background-image: linear-gradient( to bottom  , #b55d15, #cc731d );
+    /* background-image: linear-gradient( to bottom  , #b55d15, #cc731d ); */
+    /* background-color: #2c2f33; */
+    background: linear-gradient(90deg, hsla(var(--hue-color), 10%, 20%), hsla(var(--hue-color), 10%, 20%));
+    box-shadow: inset -8px 0 8px hsla(var(--hue-color), 10%, 10%),
+    inset 0 -8px 8px hsla(var(--hue-color), 10%, 12%), 
+    inset 8px 0 8px hsla(var(--hue-color), 10%, 40%),
+    inset 0 8px 8px hsla(var(--hue-color), 10%, 40%), 
+    0 0 0 2px hsla(var(--hue-color), 10%, 9%),
+    10px 20px 25px hsla(var(--hue-color), 10%, 10%);
+    color: var(--key-number-color);
+    user-select: none;
+    cursor: pointer;
+    font-weight: 400; 
+    border-radius: 10px;
+    
 }
